# HiFiLES-solver

./: .gitignore  CMakeLists.txt
include/: bdy_inters.h  cubature_1d.h  cubature_hexa.h  cubature_quad.h  cubature_tet.h  cubature_tri.h  cuda_kernels.h  eles.h  eles_hexas.h  eles_pris.h  eles_quads.h  eles_tets.h  eles_tris.h  flux.h  funcs.h  geometry.h  hf_array.h  input.h  int_inters.h  inters.h  matrix_structure.hpp  mesh.h  mpi_inters.h  output.h  solution.h  solver.h  source.h  vector_structure.hpp
src/: HiFiLES.cpp  bdy_inters.cpp  cubature_1d.cpp  cubature_hexa.cpp  cubature_quad.cpp  cubature_tet.cpp  cubature_tri.cpp  cuda_kernels.cu  eles.cpp  eles_hexas.cpp  eles_pris.cpp  eles_quads.cpp  eles_tets.cpp  eles_tris.cpp  flux.cpp  funcs.cpp  geometry.cpp  global.cpp  input.cpp  int_inters.cpp  inters.cpp  linear_solvers_structure.cpp  matrix_structure.cpp  mesh.cpp  mpi_inters.cpp  output.cpp  solver.cpp  source.cpp  vector_structure.cpp
